# zyuzlik

./: .gitignore  README.md  pyproject.toml  text_handler.py
bot/: bot.py
bot/handlers/: handler_document.py
bot/keyboards/: buttons.py
database/: create_database.py  db_manager.py  insert_data.py
logs/: logging_config.py
pandas_dir/: panda_file_riter.py
parsers/: bs4_object.py  extract_number.py  parser_onlinetrade.py  selenium_object.py
